[project]
name = "nip-rent-lesson-9"
version = "0.1.0"
description = "Narzędzia Inżynierii Programowania - lekcja 9"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "ruff>=0.15.15",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
